static/style.css
* {
	box-sizing: border-box;
}
body {
	font-family: "Fira Sans", "Helvetica Neue", "Segoe UI", sans-serif;
	font-size: 16px;
	line-height: 28px;
	color: #666;
}

input, textarea, select {
	font-family: "Fira Sans", "Helvetica Neue", "Segoe UI", sans-serif;
	border: 1px solid #ddd;
	padding: 10px 15px;
	border-radius: 3px;
}

h1, h2, h3, h4, h5 {
	font-weight: 400;
	margin: 0 0 20px 0;
}
h1 {
	font-size: 2em;
}
h2 {
	font-size: 1.3em;
	margin-bottom: 5px;
}

a {
	color: #111;
	text-decoration: none;
}
	a:hover {
		border-bottom: 2px solid #e67e22;
	}

p {
	margin: 0 0 10px 0;
}

ul {
	margin: 0;
	padding: 0;
	list-style-type: none;
}

footer {
	font-size: 0.875em;
	border-top: 1px solid #eee;
	margin: 45px 0 15px 0;
	padding-top: 15px;
	color: #999;
}
	footer a {
		color: #999;
	}

.wrap {
	max-width: 900px;
	margin: 0 auto;
	padding: 30px 30px 0 30px;
}
.header {
	width: 100%;
	display: flex;
	margin-bottom: 15px;
}
	.logo a {
		border: 0;
	}
	#burger {
		float: right;
		display: none;
	}
		#burger span {
			background: #111;
			display: block;
			height: 3px;
			width: 25px;
			margin-bottom: 4px;
			border-radius: 2px;
		}
		#burger:hover {
			border: 0;
		}
		#burger:hover span {
			background: #e67e22;
		}

.container {
	display: flex;
}
.sidebar {
	flex: 25%;
}
	.sidebar li {
		margin-bottom: 10px;
		font-style: capitalize;
	}
	.sidebar li.selected a {
		border-bottom: 2px solid #e67e22;
	}
.content {
	flex: 75%;
}

.index {
	margin: 0;
}
.intro {
	margin-left: auto;
}
.search {
	float: right;
	box-shadow: 2px 1px 2px #f1f1f1;
}

/* Entries */
#toggle-filters {
	float: right;
}

#filters {
	margin-bottom: 30px;
	display: none;
}
	#filters label {
		cursor: pointer;
		margin-right: 10px;
		display: inline-block;
	}

.toggle-filters {
	font-size: 0.875em;
}


.tag {
	background: #eee;
	font-size: 12px;
	color: #666;
	line-height: 1em;
	text-align: center;
	margin-right: 5px;

	display: inline-block;
	min-width: 85px;
	padding: 5px 15px;
	border-radius: 3px;
}
	.tag.lang {
		background: #e0ffec;
		color: #2ca05a;
	}

	/* Show max 5 tags and the "Reveal" link next to it */
	.tags .tag:nth-child(n+6) {
		display: none;
	}
	.tags .reveal {
		display: none;
	}
	.tags .tag:nth-child(n+6)+.reveal {
		display: inline-block;
		font-size: 0.875em;
		line-height: 1em;
	}
	.tags.visible .tag {
		display: inline-block !important;
	}

.title .tag {
	float: right;
}

.languages {
	margin-bottom: 20px;
}

#items {
	box-shadow: 2px 1px 1px #eee;
	border: 1px solid #eee;
}
	#items .item {
		padding: 20px 30px;
	}
	#items .item:hover {
		background: #f9f9f9;
	}

	.item .url {
		font-size: 0.8em;
		margin: 0;
	}
	.item .url a {
		color: #e67e22;
	}
	.item .url a:hover {
		border-bottom: 2px solid #e67e22;
	}

	.item .url.github a {
		color: #999;
	}
	.item .url.github a:hover {
		color: #111;
		border-bottom: 2px solid #111;
	}
	.github-icon {
		width: 14px;
		height: 14px;
		vertical-align: middle;
		margin-right: 3px;
	}

@media(max-width: 750px) {
	.wrap {
		padding: 15px;
	}
	.header {
		display: block;
		margin: 0;
	}
	#burger {
		display: block;
	}
	.search {
		float: none;
		width: 100%;
	}
	.intro {
		margin: auto;
	}
	.container {
		display: block;
	}
	.sidebar {
		text-align: center;
		display: none;
	}
	#items .item {
		padding: 15px 15px;
	}
}

